<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">!GradeSpeed</string>
    <string name="action_settings">Switch School Districs</string>
    <string name="action_about">About</string>
    <string name="logoDesc">!inc GradeSpeed Logo</string>
    <string name="loginBtn">Log in to GradeSpeed</string>
    <string name="user">Username</string>
    <string name="pass">Password</string>
    <string name="rememberQ">Remember</string>
    <string name="derangement">!inc</string>
    <string name="settings">GradeSpeed Settings</string>
    <string name="title_activity_grade_sheet">GradeSheet</string>
    <string name="gradeHeader">Grades</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_specifics">Specifics</string>
    <string name="switchstudent">Switch Student</string>
    <string name="title_activity_district_picker">District Picker</string>
    <string name="largest_grade">105</string>
    <string name="teacher_name">Donovan, Dawn A</string>
    <string name="lb_sem1">"Sem. 1: "</string>
    <string name="lb_sem2">"Sem. 2: "</string>

</resources>
