<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LogIn" >

    <Button
        android:id="@+id/logOnBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/logo"
        android:layout_alignTop="@+id/logo"
        android:text="@string/loginBtn" />

    <CheckBox
        android:id="@+id/rememberCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/logOnBtn"
        android:layout_alignBottom="@+id/logOnBtn"
        android:layout_alignLeft="@+id/logo"
        android:text="@string/rememberQ" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/passFeild"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/logoDesc"
        android:src="@drawable/icon_on_black_alpha" />

    <TextView
        android:id="@+id/company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/logo"
        android:layout_alignRight="@+id/logo"
        android:text="@string/derangement"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/userFeild"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/user" />

    <EditText
        android:id="@+id/passFeild"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/userFeild"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/pass" />

</RelativeLayout>
