<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="7dip" >

    <TextView
        android:id="@+id/teacherTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="7dp"
        android:layout_marginLeft="5dp"
        android:text="Donovan, Dawn A"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="22sp" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="7dp"
        android:src="@drawable/ic_arrow" />

    <TextView
        android:id="@+id/gradeNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:text="@string/largest_grade"
        android:layout_alignParentRight="true"
        android:layout_marginRight="34dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="37sp" />

    <TextView
        android:id="@+id/flagNEW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/imageView1"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#FF0000"
        android:textSize="16sp" />

    <TableLayout
        android:id="@+id/table_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/teacherTitle"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="85dp" >

        <TableRow
            android:id="@+id/row_semester_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/label_sem1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:textSize="14sp"
                android:text="@string/lb_sem1" />

            <TextView
                android:id="@+id/cycle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/largest_grade"
                android:layout_weight="0.2"
                android:textStyle="italic"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/cycle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/largest_grade"
                android:layout_weight="0.2"
                android:textStyle="italic"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/exam1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/largest_grade"
                android:layout_weight="0.2"
                android:textSize="16sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/semester1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/largest_grade"
                android:layout_weight="0.2"
                android:textSize="16sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:id="@+id/row_semester_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/label_sem2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:textSize="14sp"
                android:text="@string/lb_sem2" />

            <TextView
                android:id="@+id/cycle3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/largest_grade"
                android:layout_weight="0.2"
                android:textSize="16sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/cycle4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/largest_grade"
                android:layout_weight="0.2"
                android:textSize="16sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/exam2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/largest_grade"
                android:layout_weight="0.2"
                android:textSize="16sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/semester2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/largest_grade"
                android:layout_weight="0.2"
                android:textSize="16sp"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>

</RelativeLayout>